media control: fix seek bar css alignment

--- a/src/components/media_control/public/media-control.css
+++ b/src/components/media_control/public/media-control.css
@@ -142,7 +142,7 @@ div.seekbar-position[data-seekbar] {
 .media-control-icon[data-seekbar] {
   position: absolute;
   right: -6px;
-  top: -2px;
+  top: -3px;
   width: 12px;
   height: 12px;
   border-radius: 6px;
